--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+qemu (1:2.10~rc3+dfsg-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Added changes:
+    - d/qemu-system-common.docs: adapt new path of live-block-operations.rst
+      since 8508eee7
+
+ -- Christian Ehrhardt <christian.ehrhardt@canonical.com>  Fri, 25 Aug 2017 07:49:30 +0200
+
 qemu (1:2.10~rc3+dfsg-0ubuntu1) artful; urgency=medium
 
   * Merge with Debian unstable (2.8) and Upstream 2.10-rci3; This fixes
