--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ qemu (1:2.10~rc3+dfsg-0ubuntu2) UNRELEASED; urgency=medium
     - d/qemu-system-common.docs: adapt new path of live-block-operations.rst
       since 8508eee7
     - d/qemu-system-common.docs: adapt q35 config paths since 9ca019c1
+    - make nios2/hppa not installed explicitly until further stablized
 
  -- Christian Ehrhardt <christian.ehrhardt@canonical.com>  Fri, 25 Aug 2017 07:49:30 +0200
 
