--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,22 @@
+qemu (1:2.8+dfsg-6+deb9u3) UNRELEASED; urgency=high
+
+  * xhci-dont-kick-in-xhci_submit-and-xhci_fire_ctl_transfer.patch
+    This is a pre-required patch for the next patch to work right.
+    Closes: #869945
+  * xhci-guard-xhci_kick_epctx-against-recursive-calls-CVE-2017-9375.patch
+    After applying previous patch, this one can be applied again
+    Closes: #864219, CVE-2017-9375
+  * ide-do-not-flush-empty-CDROM-drives-CVE-2017-12809.patch
+    Closes: #873849, CVE-2017-12809
+  * vga-stop-passing-pointers-to-vga_draw_line-functions-CVE-2017-13672.patch
+    Closes: #873851, CVE-2017-13672
+  * multiboot-validate-multiboot-header-address-values-CVE-2017-14167.patch
+    Closes: #874606, CVE-2017-14167
+  * slirp-fix-clearing-ifq_so-from-pending-packets-CVE-2017-13711.patch
+    Closes: #873875, CVE-2017-13711
+
+ -- Michael Tokarev <mjt@tls.msk.ru>  Sat, 23 Sep 2017 17:09:09 +0300
+
 qemu (1:2.8+dfsg-6+deb9u2) stretch-security; urgency=high
 
   * actually apply the nbd server patches, not only include in debian/patches/
