update changelog, release 2.10.0+dfsg-1 to unstable

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+qemu (1:2.10.0+dfsg-1) unstable; urgency=medium
+
+  * remove blobs, to DFSG'ify it again (there's still
+    no source for some blobs included in upstream tarball)
+    There's no way to revert to 2-number version due to prev. upload
+  * update from upstream git (no changes but include date & commit-id):
+    multiboot-validate-multiboot-header-address-values-CVE-2017-14167.patch
+  * update previous changelog entry (fix bug/closes refs):
+    Closes: #873851, CVE-2017-13672
+    Closes: #874606, CVE-2017-14167
+    Closes: #873875, CVE-2017-13711
+
+ -- Michael Tokarev <mjt@tls.msk.ru>  Sat, 23 Sep 2017 18:35:29 +0300
+
 qemu (1:2.10.0-1) unstable; urgency=medium
 
   * new upstream release, 2.10
