--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,21 @@
-qemu (1:2.10.0+dfsg-2) UNRELEASED; urgency=medium
+qemu (1:2.10.0+dfsg-2) unstable; urgency=medium
 
+  * update to upstream 2.10.1 point release
+    Closes: #877160
+    Closes: CVE-2017-13673
+  * remove 3 patches included upstream:
+    multiboot-validate-multiboot-header-address-values-CVE-2017-14167.patch
+    vga-stop-passing-pointers-to-vga_draw_line-functions-CVE-2017-13672.patch
+    slirp-fix-clearing-ifq_so-from-pending-packets-CVE-2017-13711.patch
+  * 9pfs-use-g_malloc0-to-allocate-space-for-xattr-CVE-2017-15038.patch
+    Closes: #877890, CVE-2017-15038
+  * remove-trailing-whitespace-from-qemu-options.hx.patch
+    Closes: #875711
   * drop dh_makeshlibs call (was for libcacard)
   * drop linux-libc-dev build-dependency (it gets pulled by libc-dev)
   * switch from sdl1 to sdl2 (Closes: #870025)
 
- -- Michael Tokarev <mjt@tls.msk.ru>  Mon, 25 Sep 2017 09:47:03 +0300
+ -- Michael Tokarev <mjt@tls.msk.ru>  Sun, 08 Oct 2017 12:51:09 +0300
 
 qemu (1:2.10.0+dfsg-1) unstable; urgency=medium
 
