--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+qemu (1:2.10+dfsg-0ubuntu3.1) artful; urgency=medium
+
+  * d/p/detect-ITS-and-skip-usage-on-older-kernel.patch to avoid crashes
+    on arm64 when doing suspend/resume and reboots due to older kernels not
+    supporting ITS (LP: #1731051).
+
+ -- Christian Ehrhardt <christian.ehrhardt@canonical.com>  Wed, 15 Nov 2017 07:49:33 +0100
+
 qemu (1:2.10+dfsg-0ubuntu3) artful; urgency=medium
 
   * fix enablement of qemu-kvm service (LP: #1720397)
